Revert "se_project_spots_final corrected profile page__section alignment"
This reverts commit 18aba4ceb88abb1ebc01f660cef7a44116f388c9.

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -1,12 +1,9 @@
 .profile {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   width: 1280px;
   max-width: 100%;
-}
-
-.profile .page__section {
-  justify-content: space-between;
 }
 
 .profile__section {
@@ -14,15 +11,7 @@
   position: relative;
   padding-top: 20px;
   gap: 12px;
-  width: 505px;
-  height: 190px;
 }
-
-.profile__avatar-container {
-  display: flex;
-  gap: 20px;
-  position: relative;
- }
 
 .profile__edit-avatar-btn {
   display: flex;
@@ -119,8 +108,6 @@
 }
 
 .profile__add-btn {
-  flex-wrap: wrap;
-  align-self:flex-end;
   flex-shrink: 0;
   font-family: poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
@@ -138,8 +125,6 @@
   gap: 8px;
   padding: 18px 32px;
 }
-
-
 
 .profile__add-btn:hover {
   opacity: 0.8;
